[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/hud_overlay.gd" id="1_script"]

[node name="HUDOverlay" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 270.0
offset_bottom = 80.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HP: 100/100"
horizontal_alignment = 1

[node name="BarContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="BarStack" type="Control" parent="MarginContainer/VBoxContainer/BarContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/BarContainer/BarStack"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="PossessionBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/BarContainer/BarStack"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 100.0
fill_mode = 0
show_percentage = false

[node name="RingIndicator" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/RingIndicator"]
layout_mode = 2
color = Color(0.5, 0.5, 0.5, 1)
